--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@lexical/html": "latest",
     "@lexical/link": "latest",
     "@lexical/list": "latest",
-    "@lexical/react": "latest",
+    "@lexical/react": "^0.36.1",
     "@lexical/rich-text": "latest",
     "@lexical/selection": "latest",
     "@lexical/table": "latest",
