--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
     "@radix-ui/react-tooltip": "latest",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@tanstack/react-table": "latest",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "latest",
     "clsx": "^2.1.1",
     "cmdk": "latest",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "latest",
     "firebase": "latest",
     "framer-motion": "latest",
@@ -64,21 +64,22 @@
     "leaflet": "latest",
     "lexical": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.5.4",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
     "react-firebase-hooks": "latest",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.63.0",
     "react-icons": "latest",
     "react-resizable-panels": "latest",
+    "react-toastify": "^11.0.5",
     "recharts": "latest",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
-    "zod": "3.25.67"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
