--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "leaflet": "latest",
     "lexical": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.5.4",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
@@ -73,6 +73,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "latest",
+    "react-server-dom-webpack": "^19.1.1",
     "react-toastify": "^11.0.5",
     "recharts": "latest",
     "sonner": "latest",
