--- a/package.json
+++ b/package.json
@@ -67,14 +67,14 @@
     "lucide-react": "^0.454.0",
     "next": "^15.5.4",
     "next-themes": "latest",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-day-picker": "latest",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-firebase-hooks": "latest",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "latest",
-    "react-server-dom-webpack": "19.0.0",
+    "react-server-dom-webpack": "^19.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "latest",
     "sonner": "latest",
