--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "leaflet": "latest",
     "lexical": "latest",
     "lucide-react": "^0.454.0",
-    "next": "^15.5.4",
+    "next": "15.0.3",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-day-picker": "latest",
